syntax = "proto3";

option go_package = "github.com/protocolbuffers/protobuf/examples/go/tutorialpb";

package user;

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message GetUserRequest {
  int32 id = 1;
}

message AddUserRequest {
  string name = 1;
  string email = 2;
}

message ListOfUsers {
  repeated User users = 1;
}

message ListAllUserRequest {}

service UserService {
  rpc AddUser(AddUserRequest) returns (User) {}
  rpc GetUser(GetUserRequest) returns (User) {}
  rpc ListAllUser(ListAllUserRequest) returns (ListOfUsers) {}
}